Fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -16,28 +16,28 @@ body {
 
   color: var(--theme-text);
 
-  --theme-text: rgba(255, 255, 255, 0.8);
-  --theme-onActive: rgba(192, 255, 225, 0.8);
+  --theme-text: rgba(0, 0, 0, 0.8);
+  --theme-onActive: rgba(22, 77, 49, 0.8);
 
-  --button-default: #2e2e2e;
-  --button-hover: #3e3e3e;
-  --button-active: #222;
+  --button-default: #f2f2f2;
+  --button-hover: white;
+  --button-active: #ddd;
   --ghost-default: transparent;
-  --ghost-hover: rgba(255, 255, 255, 0.1);
-  --ghost-active: rgba(255, 255, 255, 0.2);
+  --ghost-hover: rgba(0, 0, 0, 0.1);
+  --ghost-active: rgba(0, 0, 0, 0.2);
 
-  --border-default: rgba(255, 255, 255, 0.1);
-  --border-active: rgba(255, 255, 255, 0.2);
-  --border-default-down: var(--border-default);
+  --border-default: rgba(0, 0, 0, 0.1);
+  --border-active: rgba(0, 0, 0, 0.2);
+  --border-default-down: var(--border-down);
   --border-up: rgba(255, 255, 255, 0.1);
   --border-down: rgba(0, 0, 0, 0.2);
-  --switch-hover: #333;
-  --switch-active: #234d34;
+  --switch-hover: White;
+  --switch-active: #99cc99;
 
-  --surface-color: #222;
-  --surface-hover: #2a2a2a;
-  --surface-active: #262626;
-  --shadow-color: rgba(0, 0, 0, 0.3);
+  --surface-color: #f2f2f2;
+  --surface-hover: #ffffff;
+  --surface-active: #e2e2e2;
+  --shadow-color: rgba(0, 0, 0, 0.1);
 
   --icon-font: "Segoe Fluent Icons";
 
@@ -51,36 +51,36 @@ body {
 }
 
 html {
-  background-color: #202020;
+  background-color: #f3f3f3;
   height: 100%;
   overflow: hidden;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   html {
-    background-color: #f3f3f3;
+    background-color: #202020;
   }
   body {
-    --theme-text: rgba(0, 0, 0, 0.8);
-    --theme-onActive: rgba(22, 77, 49, 0.8);
+    --theme-text: rgba(255, 255, 255, 0.8);
+    --theme-onActive: rgba(192, 255, 225, 0.8);
 
-    --button-default: #f2f2f2;
-    --button-hover: white;
-    --button-active: #ddd;
+    --button-default: #2e2e2e;
+    --button-hover: #3e3e3e;
+    --button-active: #222;
     --ghost-default: transparent;
-    --ghost-hover: rgba(0, 0, 0, 0.1);
-    --ghost-active: rgba(0, 0, 0, 0.2);
+    --ghost-hover: rgba(255, 255, 255, 0.1);
+    --ghost-active: rgba(255, 255, 255, 0.2);
 
-    --border-default: rgba(0, 0, 0, 0.1);
-    --border-active: rgba(0, 0, 0, 0.2);
-    --border-default-down: var(--border-down);
-    --switch-hover: White;
-    --switch-active: #99cc99;
+    --border-default: rgba(255, 255, 255, 0.1);
+    --border-active: rgba(255, 255, 255, 0.2);
+    --border-default-down: var(--border-default);
+    --switch-hover: #333;
+    --switch-active: #234d34;
 
-    --surface-color: #f2f2f2;
-    --surface-hover: #ffffff;
-    --surface-active: #e2e2e2;
-    --shadow-color: rgba(0, 0, 0, 0.1);
+    --surface-color: #222;
+    --surface-hover: #2a2a2a;
+    --surface-active: #262626;
+    --shadow-color: rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -93,8 +93,7 @@ html {
   }
 
   p {
-    line-height: 1.75rem;
-    padding-bottom: 0 !important;
+    padding-bottom: 0.5rem !important;
   }
 
   ul:has(input[type="checkbox"]) {
